--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "navrary-ck-util-componenets",
-  "version": "0.1.0",
+  "name": "ck-util-components",
+  "version": "0.1.1",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "rm -rf dist && mkdir dist && tsc"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +43,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.29",
+    "styled-components": "^6.1.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NaveOWO/navrary-CK-util-componenets.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NaveOWO/navrary-CK-util-componenets/issues"
+  },
+  "homepage": "https://github.com/NaveOWO/navrary-CK-util-componenets#readme"
 }
