--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ck-util-components",
-  "version": "0.1.2",
+  "version": "1.0.2",
   "private": false,
-  "main": "dist/index.js",
+  "main": "dist/lib/index.js",
   "types": "dist/index.d.ts",
   "browser": "./browser/specific/main.js",
+  "exports": "./src/lib",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
+    "ck-util-components": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
