--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ck-util-components",
-  "version": "1.3.0",
+  "version": "1.3.12",
   "private": false,
   "main": "dist/lib/index.js",
-  "types": "dist/index.d.ts",
-  "browser": "./browser/specific/main.js",
+  "types": "dist/lib/index.d.ts",
   "exports": "./src/lib",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
